user_wrap - arrow fix

--- a/src/styles/_user-menu.sass
+++ b/src/styles/_user-menu.sass
@@ -1,4 +1,6 @@
 .user_wrap
+    .dropdown_arrow
+        margin: 0 auto !important
     .user_details_wrap
         .user_details_name
             display: inline-block
